# PyGINVC

./: README.md  pyproject.toml  requirements.txt
config/: forward_cfg.yaml  slipinv_cfg.yaml  trislipinv_cfg.yaml
doc/: PyGINVC.tex
docs/: PyGINVC.aux
example/: SlipInversion.py  gps_mod_up.gmtvec  gps_obs.gmtvec
example/1yr_2d/: gps_mod_3d.gmtvec  gps_res_up.gmtvec  ts_slip_llh.gmtlin
pyginvc/: README.md
pyginvc/Export/: Output.py  View.py  __init__.py
pyginvc/Forward/: Checkerboard.py  Forward.py  Forward.py.bak  TriForward.py  VolForward.py
pyginvc/GeoData/: LEVData.py  __init__.py
pyginvc/GeomEst/: GeomOptimMCMC.py  GeomOptimization.py  __init__.py
pyginvc/Geometry/: Fault.py  Patch.py  __init__.py
pyginvc/Greens/: BaseGreen.py  EDCMP.py  Mogi.py  Nikkhoo.py  Nikkhoo2.py  Okada.py  TriPoly3D.py  poly3d.py
pyginvc/Greens/Triangualr/: compile  nikkhoo15.f90
pyginvc/Inversion/: GeoInversion.py  TriInversion.py  __init__.py
pyginvc/Inversion/bvls/: README  bvls.f
pyginvc/Laplacian/: RectPlaneLap.py  TriLap.py  __init__.py
pyginvc/libs/: gpstime.py
pyginvc/pscmp/: pscdisc.f  pscglob.h  pscgrn.f  pscmain.f  pscout.f
pyginvc/pscmp2/: pscglob.h
scripts/: CheckerBoardRun.py  InversionView.py  MultiFaultSlipRun.py  SlipInversion.py  TriSlipInversion.py  VolForwardRun.py  faultgeom2poly3din.py  make_faultgeom.py  plot_recdislocation_surface.py  trislipinv_cfg.yaml
src/pyginvc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pyginvc/Blocks/: Blocks.py
src/pyginvc/Export/: Output.py  View.py
src/pyginvc/Forward/: Checkerboard.py  Forward.py  TriForward.py  __init__.py
src/pyginvc/GeoData/: GPSData.py  GeoData.py  LEVData.py  SARData.py  data.h5
src/pyginvc/GeomEst/: GeomOptim.py
src/pyginvc/Geometry/: Fault.py  Patch.py  Triangle.py  Volcano.py
src/pyginvc/Greens/: BaseGreen.py  EDCMP.py  Meade.py  Mogi.py  Nikkhoo.py  Nikkhoo2.py  Okada.py  TriPoly3D.py  __init__.py  poly3d.py
src/pyginvc/Greens/okada/: README
src/pyginvc/Greens/okada_wrapper-master/: DC3Dwrapper.mexmaci64  test.m
src/pyginvc/Greens/tde/: tde.py  test_tri.py
src/pyginvc/Inversion/: BaseInversion.py  BlockBackslipInversion.py  BlockInversion.py  GenBlockBackslipInversion.py  GeoInversion.py  PatchSlipInversion.py  TriInversion.py
src/pyginvc/Inversion/bvls/: demo.py
src/pyginvc/Laplacian/: RectPlaneLap.py  TriLap.py
src/pyginvc/libs/: __init__.py  geotools.py  poly3d.py  sar_covariance.py
src/pyginvc/pscmp/: README  disazi.f  matpscmp.f  matpscmporig.f  pscokada.f
src/pyginvc/pscmp2/: README  cmbfix.f
src/pyginvc/scripts/: CheckerBoardRun.py  CheckerBoardRunOld.py  ForwardRun.py  InversionView.py  SlipInversion.py  TriForwardRun.py  TriSlipInversion.py  VolForwardRun.py  block_backslip_inversion.py  block_inversion.py  faultgeom2coulomb.py  faultgeom2curvedfault.py  faultgeom2edcmp.py  faultgeom2geojson.py  faultgeom2gmtlin.py  faultgeom2info.py  faultgeom2moment.py  faultgeom2planefault.py  faultgeom2poly3din.py  faultgeom2pscmp.py  faultgeom2relax.py  faultgeom2visco1d.py  faultgeom2visco2pt5d.py  faultgeom2vtk.py  faultgeomResolution.py  forward_cfg.yaml  fsp2faultgeom.py  plot_faultgeom.py  plot_recdislocation_surface.py  plot_tridislocation_surface.py  plot_trimesh.py  sdm2faultgeom.py  slip_rolation.py  trigeom2vtk.py  trimesh2gmtlin.py  trimesh2moment.py
test/: gps_mod.gmtvec  gps_res.gmtvec  gps_res_up.gmtvec  summary
test/1yr_2d/: FaultGeom_001  gps_mod.gmtvec  gps_mod_up.gmtvec  gps_obs.gmtvec  gps_obs_up.gmtvec  gps_res.gmtvec  greenfunc.h5  solutions.h5  ss_slip_llh.gmtlin
test/data/: gorkha_1yr.gmtvec  gorkha_2yr.gmtvec  gorkha_3yr.gmtvec
test/fault/: FaultGeom
