[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyginvc"
version = "0.1.0"
description = "a python program used for fault slip inversion from geodetic observations (GNSS, InSAR, leveling) and forward simulation."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Bin Zhao", email = "zhaobin@cgps.ac.cn" }
]
maintainers = [
    { name = "Bin Zhao", email = "zhaobin@cgps.ac.cn" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyproj",
    "h5py",
    "logging",
    "emcee",
]

[project.scripts]
"SlipInversion.py" = "scripts.SlipInversion:main"
"TriSlipInversion.py" = "scripts.TriSlipInversion:main"
"faultgeom2coulomb.py" = "scripts.faultgeom2coulomb:main"
"faultgeom2curvedfault.py" = "scripts.faultgeom2curvedfault:main"
"faultgeom2edcmp.py" = "scripts.faultgeom2edcmp:main"
"faultgeom2geojson.py" = "scripts.faultgeom2geojson:main"
"faultgeom2gmtlin.py" = "scripts.faultgeom2gmtlin:main"
"faultgeom2info.py" = "scripts.faultgeom2info:main"
"faultgeom2moment.py" = "scripts.faultgeom2moment:main"
"faultgeom2planefault.py" = "scripts.faultgeom2planefault:main"
"faultgeom2poly3d.py" = "scripts.faultgeom2poly3d:main"
"faultgeom2relax.py" = "scripts.faultgeom2relax:main"
"faultgeom2visco1d.py" = "scripts.faultgeom2visco1d:main"
"faultgeom2visco2pt5d.py" = "scripts.faultgeom2visco2pt5d:main"
"faultgeom2vtk.py" = "scripts.faultgeom2vtk:main"
"faultgeomResolution.py" = "scripts.faultgeomResolution:main"
"ForwardRun.py" = "scripts.ForwardRun:main"
"fsp2faultgeom.py" = "scripts.fsp2faultgeom:main"
"GeomOptRun.py" = "scripts.GeomOptRun:main"
"InversionView.py" = "scripts.InversionView:main"
"make_faultgeom.py" = "scripts.make_faultgeom:main"
"plot_faultgeom.py" = "scripts.plot_faultgeom:main"
"sdm2faultgeom.py" = "scripts.sdm2faultgeom:main"
"slip_rolation.py" = "scripts.slip_rolation:main"
"TriForwardRun.py" = "scripts.TriForwardRun:main"
"trimesh2gmtlin.py" = "scripts.trimesh2gmtlin:main"
"trimesh2info.py" = "scripts.trimesh2info:main"
"trimesh2moment.py" = "scripts.trimesh2moment:main"
"VolForwardRun.py" = "scripts.VolForwardRun:main"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src" 

[tool.setuptools.packages.find]
where = ["src"]
