[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyginvc"
version = "0.1.0"
description = "a python program used for fault slip inversion from geodetic observations (GNSS, InSAR, leveling) and forward simulation."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Bin Zhao", email = "zhaobin@cgps.ac.cn" }
]
maintainers = [
    { name = "Bin Zhao", email = "zhaobin@cgps.ac.cn" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyproj",
    "h5py",
    "logging",
    "emcee",
]

[project.scripts]
"SlipInversion.py" = "pyginvc.scripts.SlipInversion:main"
"TriSlipInversion.py" = "pyginvc.scripts.TriSlipInversion:main"
"faultgeom2coulomb.py" = "pyginvc.scripts.faultgeom2coulomb:main"
"faultgeom2curvedfault.py" = "pyginvc.scripts.faultgeom2curvedfault:main"
"faultgeom2edcmp.py" = "pyginvc.scripts.faultgeom2edcmp:main"
"faultgeom2geojson.py" = "pyginvc.scripts.faultgeom2geojson:main"
"faultgeom2gmtlin.py" = "pyginvc.scripts.faultgeom2gmtlin:main"
"faultgeom2info.py" = "pyginvc.scripts.faultgeom2info:main"
"faultgeom2moment.py" = "pyginvc.scripts.faultgeom2moment:main"
"faultgeom2planefault.py" = "pyginvc.scripts.faultgeom2planefault:main"
"faultgeom2poly3d.py" = "pyginvc.scripts.faultgeom2poly3d:main"
"faultgeom2relax.py" = "pyginvc.scripts.faultgeom2relax:main"
"faultgeom2visco1d.py" = "pyginvc.scripts.faultgeom2visco1d:main"
"faultgeom2visco2pt5d.py" = "pyginvc.scripts.faultgeom2visco2pt5d:main"
"faultgeom2vtk.py" = "pyginvc.scripts.faultgeom2vtk:main"
"faultgeomResolution.py" = "pyginvc.scripts.faultgeomResolution:main"
"ForwardRun.py" = "pyginvc.scripts.ForwardRun:main"
"fsp2faultgeom.py" = "pyginvc.scripts.fsp2faultgeom:main"
"GeomOptRun.py" = "pyginvc.scripts.GeomOptRun:main"
"InversionView.py" = "pyginvc.scripts.InversionView:main"
"make_faultgeom.py" = "pyginvc.scripts.make_faultgeom:main"
"plot_faultgeom.py" = "pyginvc.scripts.plot_faultgeom:main"
"sdm2faultgeom.py" = "pyginvc.scripts.sdm2faultgeom:main"
"slip_rolation.py" = "pyginvc.scripts.slip_rolation:main"
"TriForwardRun.py" = "pyginvc.scripts.TriForwardRun:main"
"trimesh2gmtlin.py" = "pyginvc.scripts.trimesh2gmtlin:main"
"trimesh2info.py" = "pyginvc.scripts.trimesh2info:main"
"trimesh2moment.py" = "pyginvc.scripts.trimesh2moment:main"
"VolForwardRun.py" = "pyginvc.scripts.VolForwardRun:main"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src" 

[tool.setuptools.packages.find]
where = ["src"]
